+ The performance of activation simulations is still not the best...
  
  
*** Significant new features & improvements:

General:
+ Python bindings! Check out resource/examples/python for a few examples on how
  to use MEGAlib in Python (v2.99.09)
+ Setup script now has an option to keep MEGAlib un-updated
+ Fixed many multi-threading bugs
+ Added old and new neural network interface

Cosima:
+ Support for Geant4 10.2
+ Option to simulate event list (including advanced example)
+ Lightcurve simulations
+ Orientations
+ StoreMinimumEnergy: Store only events which deposited at least this
  amount of energy
+ Improved dcosima distributed simulation
+ Replaced "StoreOnlyTriggeredEvents" with "PreTriggerMode" using 3 modes:
  Full, EveryEventWithHits & Everything
+ Updated all examples

Sivan:
+ Enabled comments (and their passing through) in the sim file ("CC" tag)

Fretalon:
+ Many smaller enhancements triggered by COSI analysis

Geomega:
+ New option to show the surrounding sphere (ShowSurroundingsphere true)
  This will only be displayed in geomega, but does not show up in any
  other program
+ Fixed the PEEK elemental composition to 19C12H3O from 5C8H2O
+ Dropped support for Geant3/MGeant
+ Internal rewrite of the guard ring interface: 
  - Guard rings are now their own detector type
  - You need to give 2 energy resolution data point as in all other detectors
  - Updated all examples accordingly
+ New trigger mode: TriggerMap. This mode allows much more complex trigger,
  e.g. tracks in the tracker, non-vetoable triggers for long tracks, etc.
  
Reponse:
+ New base class for all responses
+ Many improvements for COSI analysis
+ TMVA data set creation and training of machine learning codes
+ Distributed response simulation with dresponsecreator
+ TMVA mode for identifying multiple gamma-ray from single event (v2.99.10)
  
Revan:
+ Enabled comments (and their passing through) in the tra file ("CC" tag)