@@ -1,0 +1,20 @@
+<!-- neodym-config
+Type:              BlogEntry
+Date:              2018-07-24
+-->
+
+
+<neodym-blog-title>
+MEGAlib docker container
+</neodym-blog-title>
+
+<neodym-blog-summary>
+The latest version of MEGAlib has now an official Docker image for more easy deployment
+</neodym-blog-summary>
+
+
+<neodym-blog-body>
+<p>Since installing MEGAlib on many operating systems and environments might be a difficult to impossible task, I have created an official MEGAlib docker image for easy deployment. If installing MEGAlib is not your favorite task or you would have to install it on too many different machines, consider using the Docker image. Full documentation on how to create/download and run the MEGAlib Docker container can be found in the <a href="setup.html#Docker">setup section of the MEGAlib webpage</a></p>
+
+</neodym-blog-body>
+
